--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <audio id="jumpSound" src="img/jump.mp3"></audio>
         <audio id="gameOverSound" src="img/game-over.mp3"></audio>
         <audio id="gameBGAudio" src="img/audio.mp3"></audio>
+        <audio id="gameStart" src="img/start.mp3"></audio>
     </section>
 
     <script>
@@ -108,6 +109,7 @@
         const jumpSound = document.getElementById("jumpSound");
         const gameOverSound = document.getElementById("gameOverSound");
         const gameBGAudio = document.getElementById("gameBGAudio");
+        const gameStart = document.getElementById("gameStart");
         gameBGAudio.volume = 0.4;
 
         function resizeCanvas() {
@@ -202,6 +204,7 @@
         }
 
         restartBtn.addEventListener("click", () => {
+            gameStart.play();
             gameOver = false;
             dino.y = 200;
             dino.velocityY = 0;
@@ -213,6 +216,7 @@
         });
 
         startBtn.addEventListener("click", () => {
+            gameStart.play();
             gameOver = false;
             dino.y = 200;
             dino.velocityY = 0;
@@ -222,6 +226,7 @@
             gameOverSection.style.display = "none";
             gameLoop();
         });
+        
     </script>
 </body>
 
